color picker party

--- a/freeliner_sketch/data/webgui/standardWebGUI.html
+++ b/freeliner_sketch/data/webgui/standardWebGUI.html
@@ -63,21 +63,32 @@
               <input type="range" id="slider7" min="0" max="255">
           </div>
       </div>
-      <div class="widget" title="userPallet colors" style=" height:100%; float:bottom; display:inline-block;">
-         <input type="color" value="#ff0000" id="colorPicker0">
-         <input type="color" value="#ff0000" id="colorPicker1">
-         <input type="color" value="#ff0000" id="colorPicker2">
-         <input type="color" value="#ff0000" id="colorPicker3">
-         <input type="color" value="#ff0000" id="colorPicker4">
-         <input type="color" value="#ff0000" id="colorPicker5">
-         <input type="color" value="#ff0000" id="colorPicker6">
-         <input type="color" value="#ff0000" id="colorPicker7">
-         <input type="color" value="#ff0000" id="colorPicker8">
-         <input type="color" value="#ff0000" id="colorPicker9">
-         <input type="color" value="#ff0000" id="colorPicker10">
-         <input type="color" value="#ff0000" id="colorPicker11">
+      <div style=" height:100%; float:bottom; display:inline-block;">
+          <div class="widget" title="userPallet colors" style="height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="colorPicker0">
+             <input type="color" value="#ff0000" id="colorPicker1">
+             <input type="color" value="#ff0000" id="colorPicker2">
+             <input type="color" value="#ff0000" id="colorPicker3">
+             <input type="color" value="#ff0000" id="colorPicker4">
+             <input type="color" value="#ff0000" id="colorPicker5">
+             <input type="color" value="#ff0000" id="colorPicker6">
+             <input type="color" value="#ff0000" id="colorPicker7">
+             <input type="color" value="#ff0000" id="colorPicker8">
+             <input type="color" value="#ff0000" id="colorPicker9">
+             <input type="color" value="#ff0000" id="colorPicker10">
+             <input type="color" value="#ff0000" id="colorPicker11">
+          </div>
+          <div class="widget" title="userPallet colors" style="height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="fourColor0">
+             <input type="color" value="#ff0000" id="fourColor1">
+             <input type="color" value="#ff0000" id="fourColor2">
+             <input type="color" value="#ff0000" id="fourColor3">
+          </div>
+          <div class="widget" title="userPallet colors" style=" height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="twoColor0">
+             <input type="color" value="#ff0000" id="twoColor1">
+          </div>
       </div>
-
     </div>
 
     <div class="rightpane" style="width:40%; float:right;">
