--- a/freeliner_sketch/data/webgui/index.html
+++ b/freeliner_sketch/data/webgui/index.html
@@ -2,48 +2,170 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title> aziz!Light Crew FREELINER webgui launcher </title>
+  <title> a!Lc freeliner webGUI </title>
   <!-- css -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <style>
-    a {
-      color: white;
-      font-size: 20pt;
-      font-weight: bold;
-      text-align:center
-    }
-    div {
-      background-color: #1D1D1D;
-      align-content: center;
-      padding: 24px;
-      margin: 24px;
-      width: auto;
-      float: left;
-    }
-    div:hover {
-      background-color: #333333;
-    }
-  </style>
-  <div>
-    <a id="standard" href="">STANDARD</a>
-  </div>
-  <div>
-    <a id="advanced" href="">ADVANCED</a>
-  </div>
-  <div>
-    <a href="https://github.com/maxdee/alc_freeliner" style="align:">SOURCE</a>
+  <div class="wrapper pagewrapper">
+    <p id="infoline" title="standard freeliner info"> start freeliner and refresh to connect </p>
+    <button id="reload" title="reload this page" onclick="window.location.reload(true)">R</button>
+    <div class="widget" id='alphabetWidget' title="select template to edit">
+      <table id="templateSelector"> </table>
+    </div>
+    <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
+      cmd:
+      <input type="text" name="cmd" id="prompt">
+    </div>
+
+    <div style="width:60%; float:left;">
+      <div style="width:50%; float:left;">
+        <div class="widget" id='b_KEY'>  </div>
+        <div class="widget" id='e_KEY'>  </div>
+        <div class="widget" id='i_KEY'>  </div>
+        <div class="widget" id='j_KEY'>  </div>
+        <div class="widget" id='o_KEY'>  </div>
+        <div class="widget" id='p_KEY'>  </div>
+        <div class="widget" id='q_KEY'>  </div>
+        <div class="widget" id='f_KEY'>  </div>
+        <div class="widget" id='u_KEY'>  </div>
+        <div class="widget" title="Select some template (A-Z) then pick a color!">
+          stroke &nbsp; <input type="color" value="#ff0000" id="strokePicker">
+          fill &nbsp; <input type="color" value="#ff0000" id="fillPicker">
+        </div>
+
+      </div>
+      <div style="width:50%; float:right;">
+        <div class="widget" id='a_KEY'>  </div>
+        <div class="widget" id='v_KEY'>  </div>
+        <div class="widget" id='r_KEY'>  </div>
+        <div class="widget" id='h_KEY'>  </div>
+        <div class="widget" id='s_KEY'>  </div>
+        <div class="widget" id='w_KEY'>  </div>
+        <div class="widget" id='k_KEY'>  </div>
+        <div class="widget" id='l_KEY'>  </div>
+        <div class="widget" id='y_KEY'>  </div>
+        <div class="widget" id='x_KEY'>  </div>
+      </div>
+      <div class="widget" title="select shaderLayer and then adjust" style=" height:100%; float:bottom; display:inline-block;">
+          Shaders
+          <div >
+              <input type="range" id="slider0" min="0" max="255">
+              <input type="range" id="slider1" min="0" max="255">
+              <input type="range" id="slider2" min="0" max="255">
+              <input type="range" id="slider3" min="0" max="255">
+          </div>
+          <div >
+              <input type="range" id="slider4" min="0" max="255">
+              <input type="range" id="slider5" min="0" max="255">
+              <input type="range" id="slider6" min="0" max="255">
+              <input type="range" id="slider7" min="0" max="255">
+          </div>
+      </div>
+      <div style=" height:100%; float:bottom; display:inline-block;">
+          <div class="widget" title="userPallet colors" style="height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="colorPicker0">
+             <input type="color" value="#ff0000" id="colorPicker1">
+             <input type="color" value="#ff0000" id="colorPicker2">
+             <input type="color" value="#ff0000" id="colorPicker3">
+             <input type="color" value="#ff0000" id="colorPicker4">
+             <input type="color" value="#ff0000" id="colorPicker5">
+             <input type="color" value="#ff0000" id="colorPicker6">
+             <input type="color" value="#ff0000" id="colorPicker7">
+             <input type="color" value="#ff0000" id="colorPicker8">
+             <input type="color" value="#ff0000" id="colorPicker9">
+             <input type="color" value="#ff0000" id="colorPicker10">
+             <input type="color" value="#ff0000" id="colorPicker11">
+          </div>
+          <div class="widget" title="userPallet colors" style="height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="fourColor0">
+             <input type="color" value="#ff0000" id="fourColor1">
+             <input type="color" value="#ff0000" id="fourColor2">
+             <input type="color" value="#ff0000" id="fourColor3">
+          </div>
+          <div class="widget" title="userPallet colors" style=" height:100%; float:bottom; display:inline-block;">
+             <input type="color" value="#ff0000" id="twoColor0">
+             <input type="color" value="#ff0000" id="twoColor1">
+          </div>
+      </div>
+    </div>
+
+    <div class="rightpane" style="width:40%; float:right;">
+      <div class="widget">
+        <button id="configureDisplay">configureDisplay</button>
+        <button id="openRef">open reference</button>
+        <button id="refreshfiles">refresh files</button>
+        <input type="color" value="#ff0000" id="interfaceColor" title="set the background color of this page!">
+      </div>
+      <div class="widget">
+        name:
+        <input type="text" name="layerName" id="layerNameInput">
+        <select id="layerTypeSelect">
+            <!-- layers go in here -->
+            <option value="captureLayer">captureLayer</option>
+            <option value="dualInputShader">dualInputShader</option>
+            <option value="fixtureLayer">fixtureLayer</option>
+            <option value="outputLayer">guiLayer</option>
+            <option value="imageLayer">imageLayer</option>
+            <option value="maskLayer">maskLayer</option>
+            <option value="mappedOutputLayer">mappedOutputLayer</option>
+            <option value="mergeLayer">mergeLayer</option>
+            <option value="mergeOutput">mergeOutput</option>
+            <option value="outputLayer">outputLayer</option>
+            <option value="renderLayer">renderLayer</option>
+            <option value="shaderLayer">shaderLayer</option>
+            <option value="screenshotLayer">screenshotLayer</option>
+            <option value="tracerLayer">tracerLayer</option>
+        </select>
+        <button id="makeLayerButton">make</button>
+        <button id="layerUpButton" title="push selected layer up">^</button>
+        <button id="layerDownButton" title="push selected layer up">v</button>
+      </div>
+      <div id="layerStack" title="layerStack">
+        <div class="widget">
+          <!-- <button id="updateLayers" -->
+        </div>
+      </div>
+    </div>
+
+    <div id="configPopup" title="save and restart freeliner to apply">
+        <div class="widget">
+            width
+            <input type="number" value="1024" id="configWidth">
+            <br>
+            height
+            <input type="number" value="768" id="configHeight">
+        </div>
+        <div class="widget">
+            fullscreen
+            <input type="checkbox" id="fullscreenCheckBox">
+        </div>
+        <div class="widget">
+            fullscreen display
+            <select id="fullscreenType">
+                <option value="displaySpan">span all</option>
+                <option value="displayOne">display one</option>
+                <option value="displayTwo">display two</option>
+            </select>
+        </div>
+        <div class="widget">
+            simple rendering (no layers)
+            <input type="checkbox" id="pipelineCheckBox">
+        </div>
+        <div class="widget">
+            <input type="button" id="saveConfig" value="save" >
+        </div>
+        <div class="widget">
+            <input type="button" id="cancelConfig" value="cancel" >
+        </div>
+    </div>
   </div>
 
-  <script>
-    document.getElementById("standard").onclick = function(){
-      window.open("standardWebGUI.html", "Freeliner WEBGUI", "width=1000,height=700");
-    }
-    document.getElementById("advanced").onclick = function(){
-      window.open("advancedWebGUI.html", "Freeliner WEBGUI", "width=1000,height=700");
-    }
-  </script>
+  <div class="footer"> <p id="logline">of course!</p> </div>
+  <!-- javascripts -->
+  <script language="javascript" type="text/javascript" src="freelinerWebGUI.js"></script>
+
 </body>
+
 </html>
