--- a/freeliner_sketch/data/webgui/index.html
+++ b/freeliner_sketch/data/webgui/index.html
@@ -84,6 +84,13 @@
           </div>
       </div>
     </div>
+    <div style=" height:100%; float:bottom;">
+        <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
+          scrpt:
+          <input type="text" name="scrpt" id="scripting">
+        </div>
+    </div>
+
 
     <div class="rightpane" style="width:40%; float:right;">
       <div class="widget">
