before matrix test fork

--- a/freeliner_sketch/data/webgui/index.html
+++ b/freeliner_sketch/data/webgui/index.html
@@ -16,7 +16,12 @@
     </div>
     <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
       cmd:
-      <input type="text" name="cmd" id="prompt">
+      <input type="text" name="cmd" id="prompt" style="width:90%">
+    </div>
+
+    <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
+      scrpt:
+      <input type="text" name="scrpt" id="scripting" style="width:90%">
     </div>
 
     <div style="width:60%; float:left;">
@@ -84,12 +89,7 @@
           </div>
       </div>
     </div>
-    <div style=" height:100%; float:bottom;">
-        <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
-          scrpt:
-          <input type="text" name="scrpt" id="scripting">
-        </div>
-    </div>
+
 
 
     <div class="rightpane" style="width:40%; float:right;">
