--- a/freeliner_sketch/data/webgui/index.html
+++ b/freeliner_sketch/data/webgui/index.html
@@ -19,10 +19,10 @@
       <input type="text" name="cmd" id="prompt" style="width:90%">
     </div>
 
-    <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
+    <!-- <div class="widget" title="type a freeliner command and press enter, use up down arrows supported">
       scrpt:
       <input type="text" name="scrpt" id="scripting" style="width:90%">
-    </div>
+    </div> -->
 
     <div style="width:60%; float:left;">
       <div style="width:50%; float:left;">
